changed memory limits for heroku